Fix overflow and responsive problem by adding aspect-ratio: 1 / 1 to the container
Added other buttons:
-Normal mode as a black color instead of the rainbow brush by default
-Shadowing mode
-erase and erase all

Fix mode switching by adding a "mode" variable so the that the listener added depends on it

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,26 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+body {
+  margin: 0;
   box-sizing: border-box;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  height: 100vh;
+  justify-content: center;
+  flex-wrap: wrap;
+  min-height: 100vh;
+  padding: 2rem;
+  background-color: #f0f0f0;
+  gap: 10px;
+}
+
+.buttons{
+  display: flex;
+  flex-direction: column;
+  
 }
 
 button {
@@ -15,19 +29,28 @@ button {
 }
 
 .container {
-  flex: 1;
-  display: grid;
-  width: 100vmin; /* or 100vmin to use full screen */
-  height: 100vmin;
-  margin-bottom: 32px;
+  display: flex;
+  flex-direction: column;
+  width: 90vmin; /* square but with margin */
+  height: 90vmin;
+  max-width: 600px;
+  max-height: 600px;
+  aspect-ratio: 1 / 1;
+  border: 2px solid #444;
+  background-color: #fff;
+  box-shadow: 0  5px 5px rgba(7, 7, 7, 0.363),
+              5px  5px 5px rgba(7, 7, 7, 0.363),
+              -5px  5px 5px rgba(7, 7, 7, 0.363);
+
 }
 
 .child {
-  display: contents; /* flatten child so all .pixel go into the grid */
+  display: flex; 
+  flex: 1;
+  width: 100%;
 }
 
 .pixel {
-  border: 1px solid #cfa6a6;
-  width: 100%;
-  height: 100%;
+  flex: 1;
+  aspect-ratio: 1 / 1;
 }
